tests-integration/fixtures/checking/1772567400_derive_eq_partial/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
Left :: forall (@a :: Type) (@b :: Type). (a :: Type) -> Either (a :: Type) (b :: Type)
Right :: forall (@a :: Type) (@b :: Type). (b :: Type) -> Either (a :: Type) (b :: Type)

Types
Either :: Type -> Type -> Type

Derived
derive forall (t2 :: Type). Eq (t2 :: Type) => Eq (Either Int (t2 :: Type))
derive forall (t4 :: Type). Eq (Either Int (t4 :: Type))

Roles
Either = [Representational, Representational]

Diagnostics
error[NoInstanceFound]: No instance found for: Eq (t4 :: Type)
  --> 9:1..9:34
  |
9 | derive instance Eq (Either Int b)
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
